create bone of facebook